# Tower_of_Babel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  rfc.yml  task.yml
.github/workflows/: ci.yml
bot/: config.py  main.py
bot/cogs/: admin.py  audit.py  orchestrator.py  roles.py  tasks.py  voting.py
decisions/: 0001-bootstrap.yaml  0002-phase5-dogfooding.yaml  README.md
docs/: CONTRIBUTING.md  DEPLOY.md  onboarding.md
infra/: Dockerfile  docker-compose.yml  setup.sh  setup_discord.py
integrations/: __init__.py  github.py  poller.py  webhooks.py
orchestrator/: __init__.py  assign.py  deadlines.py  decompose.py  digest.py  llm.py  metrics.py  projects.py  release_notes.py  review.py
tests/: test_voting.py
translations/: README.ar.md  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.sw.md  README.ta.md  README.th.md  README.tl.md  README.tr.md  README.vi.md  README.zh.md
